--- a/modules/security-context-constraints-psa-opting.adoc
+++ b/modules/security-context-constraints-psa-opting.adoc
@@ -27,6 +27,8 @@ If an Operator is installed in a user-created `openshift-*` namespace, synchroni
 .Procedure
 
 * For each namespace that you want to configure, set a value for the `security.openshift.io/scc.podSecurityLabelSync` label:
++
+--
 ** To disable pod security admission label synchronization in a namespace, set the value of the `security.openshift.io/scc.podSecurityLabelSync` label to `false`.
 +
 Run the following command:
@@ -44,3 +46,9 @@ Run the following command:
 ----
 $ oc label namespace <namespace> security.openshift.io/scc.podSecurityLabelSync=true
 ----
+--
++
+[NOTE]
+====
+Use the `--overwrite` flag to overwrite the value if this label is already set on the namespace.
+====
