OSDOCS-12128: SDN support removal warning for 4.17

--- a/modules/update-best-practices.adoc
+++ b/modules/update-best-practices.adoc
@@ -36,6 +36,18 @@ In most cases this alert does not block patch updates, but you cannot perform a 
 
 For more information about the `Upgradeable` condition, see "Understanding cluster Operator condition types" in the additional resources section.
 
+[id="sdn-support-removal"]
+=== SDN support removal
+
+OpenShift SDN network plugin was deprecated in versions 4.15 and 4.16. With this release, the SDN network plugin is no longer supported and the content has been removed from the documentation.
+
+If your {product-title} cluster is still using the OpenShift SDN CNI, see link:https://docs.redhat.com/en/documentation/openshift_container_platform/4.16/html/networking/ovn-kubernetes-network-plugin#migrate-from-openshift-sdn[Migrating from the OpenShift SDN network plugin].
+
+[IMPORTANT]
+====
+It is not possible to update a cluster to {product-title} 4.17 if it is using the OpenShift SDN network plugin. You must migrate to the OVN-Kubernetes plugin before upgrading to {product-title} 4.17. 
+====
+
 [id="nodes-ready_{context}"]
 == Ensure that enough spare nodes are available
 
