--- a/rosa_architecture/rosa_policy_service_definition/rosa-hcp-service-definition.adoc
+++ b/rosa_architecture/rosa_policy_service_definition/rosa-hcp-service-definition.adoc
@@ -19,25 +19,14 @@ include::modules/rosa-sdpolicy-am-cluster-self-service.adoc[leveloffset=+2]
 [role="_additional-resources"]
 .Additional Resources
 
-ifdef::openshift-rosa-hcp[]
-* link:https://docs.openshift.com/rosa/rosa_architecture/rosa_policy_service_definition/rosa-hcp-service-definition.html#rosa-sdpolicy-red-hat-operator_rosa-service-definition[Red{nbsp}Hat Operator Support]
-endif::openshift-rosa-hcp[]
-ifndef::openshift-rosa-hcp[]
-* xref:../../rosa_architecture/rosa_policy_service_definition/rosa-hcp-service-definition.adoc#rosa-sdpolicy-red-hat-operator_rosa-service-definition[Red{nbsp}Hat Operator Support]
-endif::openshift-rosa-hcp[]
+* xref:../../rosa_architecture/rosa_policy_service_definition/rosa-hcp-service-definition.adoc#rosa-sdpolicy-red-hat-operator_rosa-hcp-service-definition[Red{nbsp}Hat Operator Support]
 
 include::modules/rosa-sdpolicy-instance-types.adoc[leveloffset=+2]
 
 [role="_additional-resources"]
 .Additional Resources
 
-For a detailed listing of supported instance types, see 
-ifdef::openshift-rosa-hcp[]
-link:https://docs.openshift.com/rosa/rosa_policy_service_definition/rosa-hcp-instance-types.html#rosa-hcp-instance-types[{hcp-title} instance types].
-endif::openshift-rosa-hcp[]
-ifndef::openshift-rosa-hcp[]
-xref:../rosa_policy_service_definition/rosa-hcp-instance-types.adoc#rosa-hcp-instance-types[{hcp-title} instance types].
-endif::openshift-rosa-hcp[]
+For a detailed listing of supported instance types, see xref:../rosa_policy_service_definition/rosa-hcp-instance-types.adoc#rosa-hcp-instance-types[{hcp-title} instance types].
 
 include::modules/rosa-sdpolicy-am-regions-az.adoc[leveloffset=+2]
 
@@ -81,10 +70,4 @@ ifndef::openshift-rosa-hcp[]
 xref:../rosa_policy_service_definition/rosa-policy-process-security.adoc#rosa-policy-process-security[Understanding process and security for ROSA] for the latest compliance information.
 endif::openshift-rosa-hcp[]
 
-* See 
-ifdef::openshift-rosa-hcp[]
-link:https://docs.openshift.com/rosa/rosa_policy_service_definition/rosa-life-cycle.adoc#rosa-life-cycle[ROSA life cycle]
-endif::openshift-rosa-hcp[]
-ifndef::openshift-rosa-hcp[]
-xref:../rosa_policy_service_definition/rosa-life-cycle.adoc#rosa-life-cycle[ROSA life cycle]
-endif::openshift-rosa-hcp[]
+* See xref:../rosa_policy_service_definition/rosa-hcp-life-cycle.adoc#rosa-hcp-life-cycle[ROSA life cycle]
