[enterprise-4.14] OSDOCS#10999: HCP introducing MCE and relationship between HCP, MCE, and ACM

--- a/hosted_control_planes/index.adoc
+++ b/hosted_control_planes/index.adoc
@@ -10,12 +10,7 @@ toc::[]
 
 include::modules/hosted-control-planes-concepts-personas.adoc[leveloffset=+1]
 include::modules/hosted-control-planes-overview.adoc[leveloffset=+1]
-
-[role="_additional-resources"]
-.Additional resources
-
-* link:https://access.redhat.com/documentation/en-us/red_hat_advanced_cluster_management_for_kubernetes/2.9/html/clusters/cluster_mce_overview#hosted-control-planes-intro[{hcp-capital}]
-
+include::modules/hcp-mce-acm-relationship-intro.adoc[leveloffset=+1]
 include::modules/hosted-control-planes-version-support.adoc[leveloffset=+1]
 
 [role="_additional-resources"]
