Insights Operator bug batching/enhancements

--- a/release_notes/ocp-4-17-release-notes.adoc
+++ b/release_notes/ocp-4-17-release-notes.adoc
@@ -837,8 +837,13 @@ For more information about the `ImageBasedGroupUpgrade` API, see xref:../edge_co
 [id="ocp-4-17-hcp_{context}"]
 === Hosted control planes
 
-[id="ocp-4-17-insights-operator_{context}"]
-=== Insights Operator
+[id="ocp-4-17-insights-operator-enhancements_{context}"]
+=== Insights Operator enhancements
+
+* The Insights Operator now collects the `haproxy_exporter_server_threshold` metric. (link:https://issues.redhat.com/browse/OCPBUGS-36687[*OCPBUGS-36687*])
+
+* Previously, the Insights Operator gathered information about all Ingress Controller certificates, including their `NotBefore` and `NotAfter` dates. This data is now compiled into a `JSON` file located at `aggregated/ingress_controllers_certs.json` for easier monitoring of certificate validity across the cluster.
+(link:https://issues.redhat.com/browse/OCPBUGS-35727[*OCPBUGS-35727*])
 
 [id="ocp-4-17-etcd-certificates_{context}"]
 === Security
@@ -1347,6 +1352,8 @@ link:https://issues.redhat.com/browse/OCPBUGS-39428[(*OCPBUGS-39428*)]
 [discrete]
 [id="ocp-4-17-insights-operator-bug-fixes_{context}"]
 ==== Insights Operator
+
+* Previously, in some Hypershift hosted clusters, the IO archive contained the hostname even with network obfuscation enabled. This issue has been resolved, and IO archives no longer contain hostnames when they are obfuscated. (link:https://issues.redhat.com/browse/OCPBUGS-33082[*OCPBUGS-33082*])
 
 [discrete]
 [id="ocp-4-17-kube-controller-bug-fixes_{context}"]
