Adding GCP as available to use with the  SSCSI operator

--- a/release_notes/ocp-4-17-release-notes.adoc
+++ b/release_notes/ocp-4-17-release-notes.adoc
@@ -986,6 +986,14 @@ include::snippets/developer-preview.adoc[]
 
 For more information about cns-migration, see link:https://github.com/openshift/vmware-vsphere-csi-driver-operator/blob/master/docs/cns-migration.md[Moving CNS volumes between datastores].
 
+[id="ocp-4-17-storage-secrets-store-csi-driver-gcp_{context}"]
+==== Google Secret Manager is now available for the {secrets-store-operator} (Technology Preview)
+You can now use the {secrets-store-operator} to mount secrets from Google Secret Manager to a Container Storage Interface (CSI) volume in {product-title}. The {secrets-store-operator} is available as a Technology Preview feature.
+
+For the full list of available secrets store providers, see xref:../nodes/pods/nodes-pods-secrets-store.adoc#secrets-store-providers_nodes-pods-secrets-store[Secrets store providers].
+
+For information about using the {secrets-store-operator} to mount secrets from Google Secret Manager, see xref:../nodes/pods/nodes-pods-secrets-store.adoc#secrets-store-google_nodes-pods-secrets-store[Mounting secrets from Google Secret Manager].
+
 ////
 [id="ocp-4-17-oci"]
 === {oci-first}
